--- a/ionic/ionic/www/dash/templates/myTrip.html
+++ b/ionic/ionic/www/dash/templates/myTrip.html
@@ -1,17 +1,19 @@
 <div class="list card no-padding small-margin-bottom smaller-margin-top my-trip " ng-if="trip">
   <div class="item item-divider bar bar-royal background-color-lighter-slate">
-    <span ng-if="!trip.recurring">{{ trip.date | formatDateOnetimeTrip }} at {{ trip.departureTime | formatTime }}</span>
-    <span ng-if="trip.recurring">Recurring: {{ trip.days | showTripDays}} at {{ trip.departureTime | formatTime }}</span>
+    <!--TODO: translate-->
+    <span ng-if="!trip.recurring">{{ trip.date | formatDateOnetimeTrip }} {{'AT' | translate}} {{ trip.departureTime | formatTime }}</span>
+    <span ng-if="trip.recurring">
+      {{'RECURRING' | translate }}: {{ trip.days | showTripDays}} {{'AT' | translate}} {{ trip.departureTime | formatTime }}</span>
   </div>
 
   <label class="item item-input ">
-    <span class="underline my-trip"><b>Depart:</b></span>
+    <span class="underline my-trip"><b>{{'DEPART' | translate}}:</b></span>
     <input class="white-background small-margin-left my-trip text-center" type="text" readonly
            value="{{ trip.departureLocation.formattedAddress | formatStreetAddress}}">
   </label>
 
   <label class="item item-input">
-    <span class="underline my-trip"><b>Arrive:</b></span>
+    <span class="underline my-trip"><b>{{'ARRIVE' | translate}}:</b></span>
     <input class="white-background small-margin-left my-trip text-center" type="text" readonly
            value="{{  trip.arrivalLocation.formattedAddress | formatStreetAddress }}">
   </label>
@@ -22,10 +24,10 @@
       <i class="icon ion-edit"></i>
     </a>
 
-    <a class="tab-item" ui-sref="tab.matches({tripIndex: tripIndex})">
+    <a class="tab-item {{selectedLangKey}}" ui-sref="tab.matches({tripIndex: tripIndex})">
       <i class="icon ion-android-social"></i>
       <span class="badge badge-royal matches">0</span>
-      <span class="matches-text">Matches</span>
+      <span class="matches-text ">{{'MATCHES' | translate}}</span>
     </a>
 
     <a class="tab-item col-25" ng-click="showDeleteConfirm(trip)">
