--- a/ionic/ionic/www/dash/templates/noTrips.html
+++ b/ionic/ionic/www/dash/templates/noTrips.html
@@ -1,9 +1,9 @@
 <div class="no-trips">
-  <h4 class="text-center">No Trips Added Yet</h4>
+  <h4 class="text-center">{{'NO_TRIPS_ADDED' | translate}}</h4>
   <div class="text-center">
     <a ui-sref="tab.dash-edit-trip">
       <button class="button button-calm button-small larger-text-with-padding icon-left ion-plus-round ">
-        Add a Trip
+        {{'ADD_A_TRIP' | translate}}
       </button>
     </a>
   </div>
