--- a/ionic/ionic/www/dash/templates/selectLocationModal.html
+++ b/ionic/ionic/www/dash/templates/selectLocationModal.html
@@ -3,7 +3,7 @@
 
     <div class="item item-divider item-royal">
       <span class="modal-title">
-        Departure Location
+        {{'DEPARTURE_LOCATION' | translate}}
       </span>
 
       <i class="icon ion-close-circled modal-close" ng-click="closeSelectLocationModal()"></i>
@@ -14,7 +14,7 @@
 
       </label>
       <button class="button button-small button-energized">
-        Submit
+        {{ 'SUBMIT' | translate }}
       </button>
 
 
