--- a/ionic/ionic/www/dash/templates/tab-dash.html
+++ b/ionic/ionic/www/dash/templates/tab-dash.html
@@ -6,11 +6,11 @@
       <!--h-->
     <!--</a></h1>-->
     <h1 class="text-center font-weight-lighter">Pooler</h1>
-    <h4 class="text-center font-weight-lighter">Ridersharing, planned</h4>
+    <h4 class="text-center font-weight-lighter">{{ 'RIDESHARRING_PLANNED' | translate }}</h4>
 
     <div class="row margin-top-25-percent">
       <div class="col">
-          <h5 class="text-center">To begin, sign in with Uber</h5>
+          <h5 class="text-center">{{ 'SIGN_IN_UBER' | translate }}</h5>
 
         <div class="row">
           <img ng-src="img/uber1.png" alt="" class="width-100 height-100" ng-click="login()"/>
