--- a/ionic/ionic/www/matches/templates/tripSelector.html
+++ b/ionic/ionic/www/matches/templates/tripSelector.html
@@ -1,9 +1,9 @@
 <label class="item item-input no-border background-transparent">
-  <span class="trip-select-label"><b>Trip:</b></span>
+  <span class="trip-select-label"><b>{{ 'TRIP' | translate }}:</b></span>
 
   <button class="button button-small button-outline button-royal margin-auto " ng-click="showSelectTripModal()">
     {{ trip.departureLocation.formattedAddress | formatStreetAddress | displayStreet }}
-    at {{ trip.departureTime | formatTime }}
+    {{ 'AT' | translate }} {{ trip.departureTime | formatTime }}
       <span ng-show="trips.length > 1">&nbsp;▼</span>
   </button>
 
