--- a/ionic/ionic/www/templates/tabs.html
+++ b/ionic/ionic/www/templates/tabs.html
@@ -7,19 +7,19 @@
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
+  <ion-tab title="{{ 'DASHBOARD' | translate }}" icon="icon ion-home" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Friends Tab -->
-  <ion-tab title="Nearby Rides" icon="icon ion-ios7-location" href="#/tab/nearby">
+  <ion-tab title="{{ 'NEARBY_RIDES' | translate }}" icon="icon ion-ios7-location" href="#/tab/nearby">
     <ion-nav-view name="tab-nearby"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Account Tab -->
-  <ion-tab title="Matches" icon="icon ion-android-social" href="#/tab/matches">
+  <ion-tab title="{{ 'MATCHES' | translate }}" icon="icon ion-android-social" href="#/tab/matches">
     <ion-nav-view name="tab-matches"></ion-nav-view>
   </ion-tab>
 
