--- a/ionic/ionic/www/matches/templates/noMatches.html
+++ b/ionic/ionic/www/matches/templates/noMatches.html
@@ -1,9 +1,9 @@
-<h3 class="text-center margin-top-25-percent">No matches for this trip yet</h3>
-<p class="text-center">We'll notify you have a new match.</p>
-<p class="text-center">In the meantime, checkout trips near you</p>
+<h3 class="text-center margin-top-25-percent">{{ 'NO_MATCHES_YET' | translate }}</h3>
+<p class="text-center">{{ 'NOTIFY_WHEN_MATCH' | translate }}</p>
+<p class="text-center">{{ 'MEANTIME_CHECKOUT_TRIPS' | translate }}</p>
 
 <div class="row">
   <a ui-sref="tab.nearby" class="margin-auto">
-    <button class="button button-energized">Browse Nearby Trips</button>
+    <button class="button button-energized">{{ 'BROWSE_NEARBY_TRIPS' | translate }}</button>
   </a>
 </div>
