--- a/ionic/ionic/www/matches/templates/selectMeetupPointModal.html
+++ b/ionic/ionic/www/matches/templates/selectMeetupPointModal.html
@@ -1,6 +1,6 @@
 <ion-content overflow-scroll="true" class="select-trip-modal">
   <ion-header-bar class="bar-royal">
-    <button class="button button-royal no-border">Drag the green point to your desired meetup location</button>
+    <button class="button button-royal no-border">{{ 'DRAG_TO_MEETUP_LOCATION' | translate }}</button>
 
   </ion-header-bar>
   <div id="map_canvas" ng-if="markers.length > 1">
@@ -25,25 +25,26 @@
               </div>
               <div class="col trip-info">
                 <span ng-if="trip.recurring">
+                  <!--TODO: translate-->
                   <b>{{ marker.trip.days | pluralizeDay }}</b>: {{ marker.trip.days | showTripDays }}
                 </span>
                 <span ng-if="!trip.recurring">
-                  <b>Date</b>: {{ marker.trip.date | formatDateOnetimeTrip }}
+                  <b>{{ 'DATE' | translate }}</b>: {{ marker.trip.date | formatDateOnetimeTrip }}
                 </span>
                 <br/>
-                <b>Depart:</b> {{ marker.trip.departureTime| formatTime }}
+                <b>{{ 'DATE' | translate }}</b> {{ marker.trip.departureTime| formatTime }}
                 <br/>
-                <b>Buffer:</b> +/- {{ marker.trip.bufferWindow }} min
+                <b>{{ 'BUFFER' | translate }}:</b> +/- {{ marker.trip.bufferWindow }} min
                 <br/>
                 <div class="destination-info">
-                  <b>Destination: </b>{{ marker.trip.arrivalLocation.formattedAddress | formatStreetAddress | displayStreet }}
+                  <b>{{ 'DESTINATION' | translate }}: </b>{{ marker.trip.arrivalLocation.formattedAddress | formatStreetAddress | displayStreet }}
                 </div>
               </div>
             </div>
             <div class="row text-center">
               <div class="col col-offset-20">
                 <button class="button button-small button-energized icon-left ion-pin larger-text-with-padding set-meetup-point">
-                  Meet here
+                  {{ 'MEET_HERE' | translate }}
                 </button>
               </div>
             </div>
@@ -73,7 +74,7 @@
     <ion-footer-bar class="background-color-transparent">
       <button ng-click="setMeetupPoint()"
               class="text-center button button-energized button-icon icon ion-android-locate margin-auto footer-button">
-        Set Meetup Point
+        {{ 'SET_MEETUP_POINT' | translate}}
       </button>
     </ion-footer-bar>
   </div>
